--- a/code_sensor/Sunbox_v2_sensor/platformio.ini
+++ b/code_sensor/Sunbox_v2_sensor/platformio.ini
@@ -16,3 +16,5 @@ lib_deps =
 	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
 	adafruit/Adafruit SSD1306@^2.5.10
 	adafruit/Adafruit GFX Library@^1.11.9
+	thewknd/VEML6040@^0.3.2
+	adafruit/Adafruit VEML7700 Library@^2.1.6
