--- a/PlatformIO_version/ESP32_TFlite/platformio.ini
+++ b/PlatformIO_version/ESP32_TFlite/platformio.ini
@@ -8,13 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:nodemcu-32s]
 platform = espressif32
-board = esp32dev
+board = nodemcu-32s
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
-	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
-	adafruit/Adafruit SSD1306@^2.5.10
-	adafruit/Adafruit GFX Library@^1.11.9
-	thewknd/VEML6040@^0.3.2
-	adafruit/Adafruit VEML7700 Library@^2.1.6
+	eloquentarduino/EloquentTinyML@^0.0.3
+	adafruit/Adafruit APDS9960 Library@^1.3.0
+	SPI
